<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1,2"
        tools:context=".MainActivity">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_course1"
                android:layout_gravity="center"
                android:padding="3dip"
                android:textSize="18sp"/>
            <EditText
                android:layout_column="2"
                android:hint="@string/T_F_course"
                android:gravity="center"
                android:padding="3dip"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_course2"
                android:layout_gravity="center"
                android:padding="3dip"
                android:textSize="18sp"/>
            <EditText
                android:layout_column="2"
                android:hint="@string/T_F_course"
                android:gravity="center"
                android:padding="3dip"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_course3"
                android:layout_gravity="center"
                android:padding="3dip"
                android:textSize="18sp"/>
            <EditText
                android:layout_column="2"
                android:hint="@string/T_F_course"
                android:gravity="center"
                android:padding="3dip"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_course4"
                android:layout_gravity="center"
                android:padding="3dip"
                android:textSize="18sp"/>
            <EditText
                android:layout_column="2"
                android:hint="@string/T_F_course"
                android:gravity="center"
                android:padding="3dip"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_course5"
                android:layout_gravity="center"
                android:padding="3dip"
                android:textSize="18sp"/>
            <EditText
                android:layout_column="2"
                android:hint="@string/T_F_course"
                android:gravity="center"
                android:padding="3dip"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_gpa"
                android:layout_gravity="right"
                android:padding="3dip"
                android:textSize="18sp"/>
            <TextView
                android:layout_column="1"
                android:text="@string/T_V_result"
                android:layout_gravity="left"
                android:padding="3dip"
                android:textSize="18sp"/>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doMath" />
        </LinearLayout>
    </TableLayout>
</LinearLayout>

<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/T_V_course1"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/T_V_course2"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/T_V_course3"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/T_V_course4"
                android:maxLines="1"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/T_V_course5"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
-->
